--- a/src/main/resources/static/resource/common.css
+++ b/src/main/resources/static/resource/common.css
@@ -11,8 +11,16 @@ html>body {
 }
 
 /* 라이브러리 */
-.table-box-type-1 thead th, .table-box-type-1 td {
+th, td {
 	border: 1px solid black;
 	padding: 10px;
 	text-align: center;
+}
+
+a:hover {
+	color: deepskyblue;
+}
+
+button:hover {
+	color: deepskyblue;
 }
