--- a/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
+++ b/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
@@ -29,31 +29,34 @@
 </head>
 <body>
 	<header>
-		<div class="flex mx-auto text-3xl ">
-			<a class="logo" href="/">ToToWeb</a>
-			<div class="flex-grow"></div>
-			<ul class="flex">
-				<li><a href="/usr/article/list?boardId=0&page=1">LIST</a>
-					<ul>
-						<li><a href= "/usr/article/list?boardId=1&page=1">NOTICE</a></li>
-						<li><a href= "/usr/article/list?boardId=2&page=1">FREE</a></li>
-						<li><a href= "/usr/article/list?boardId=3&page=1">QNA</a></li>
-					</ul>
-				</li>
-				<li><a href="/usr/article/write">WRITE</a></li>
-				<c:if test="${!rq.isLogined() }">
-					<li><a href="/usr/member/login">LOGIN</a></li>
-					<li><a href="/usr/member/join">JOIN</a></li>
-				</c:if>
-				<c:if test="${rq.isLogined() }">
-				<li><a href="/usr/member/doLogout">LOGOUT</a></li>
-				</c:if>
+		<section class="mt-5 text-xl">
+			<div class="container mx-auto px-3">
+				<div class="flex mx-auto text-3xl ">
+					<a class="logo" href="/">ToToWeb</a>
+				<div class="flex-grow"></div>
+				<ul class="flex">
+					<li><a href="/usr/article/list?boardId=0&page=1">LIST</a>
+						<ul>
+							<li><a href= "/usr/article/list?boardId=1&page=1">NOTICE</a></li>
+							<li><a href= "/usr/article/list?boardId=2&page=1">FREE</a></li>
+							<li><a href= "/usr/article/list?boardId=3&page=1">QNA</a></li>
+						</ul>
+					</li>
+					<li><a href="/usr/article/write">WRITE</a></li>
+					<c:if test="${!rq.isLogined() }">
+						<li><a href="/usr/member/join">JOIN</a></li>
+						<li><a href="/usr/member/login">LOGIN</a></li>
+					</c:if>
+					<c:if test="${rq.isLogined() }">
+						<li><a href="/usr/member/myPage">MYPAGE</a></li>
+						<li><a href="/usr/member/doLogout">LOGOUT</a></li>
+					</c:if>
 			</ul>
 		</div>
 		<div class="h-10 flex mx-auto text-3xl ">
 				<c:choose>
-					<c:when test="${loginedMemberId ne null}">
-					<div>로그인 중입니다. (${loginedMemberNickname })</div>
+					<c:when test="${rq.isLogined()}">
+					<div>로그인 중입니다. (${rq.loginedMemberNickname })</div>
 					</c:when>
 					<c:otherwise>
 					<div>로그인 중이 아닙니다.</div>
@@ -61,6 +64,8 @@
 				</c:choose>
 		</div>
 		<div>${pageTitle }</div>
+	</div>
+	</section>
 	</header>
 	<main>
 	<hr>
